--- a/stop-motion.html
+++ b/stop-motion.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>The Super Mario Bros</title>
+  <title>Cine Pipoca</title>
   <link rel="icon" type="image/x-icon" href="assets/boton_coraline-removebg-preview.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/global.css">
